--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Custom Folders
 /.refs
+/data/config/*
 
 # Custom Extensions
 *.log.*
 
 # Custom Files
 .DS_Store
+!**/*.example
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
