--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "clickloop"
 version = "0.0.1"
 description = "Automated mouse clicking script for Windows with multi-monitor support"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 license = {text = "MIT"}
 authors = [
     {name = "Chris"}
@@ -31,3 +31,8 @@ packages = ["clickloop"]
 
 [tool.setuptools.package-dir]
 "" = "src"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+]
