--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,7 @@ packages = ["clickloop"]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
+    "pylint>=4.0.2",
+    "pytest>=9.0.0",
+    "pytest-cov>=7.0.0"
 ]
