--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,25 +8,17 @@ version = "0.0.1"
 description = "Automated mouse clicking script for Windows with multi-monitor support"
 readme = "README.md"
 requires-python = ">=3.12"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Chris"}
 ]
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: Microsoft :: Windows",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-]
+keywords = ["automation", "mouse", "clicking", "windows", "multi-monitor"]
 
 [project.scripts]
-clickloop = "clickloop.__main__:main"
+click = "clickloop.__main__:main"
 
 [tool.setuptools]
+package-dir = {"" = "src"}
 packages = ["clickloop"]
 
 [project.optional-dependencies]
